--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "goit-hw-08",
+  "name": "parcel-project-template",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://StepanKarpyak.github.io/goit-js-hw-08/",
+  "homepage": "https://github.com/StepanKarpyak/goit-js-hw-08/",
   "scripts": {
     "dev": "parcel src/index.html --open",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/StepanKarpyak/goit-js-hw-08"
+    "url": "git+https://github.com/StepanKarpyak/goit-js-hw-08.git"
   },
   "keywords": [],
-  "author": "StepanKarpyak <stepan_karpyak@ukr.net>",
+  "author": "Stepan Karpyak <stepan_karpyak@ukr.net>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/StepanKarpyak/goit-js-hw-08/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
