--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "homepage": "https://StepanKarpyak.github.io/goit-js-hw-08/",
   "scripts": {
-    "dev": "parcel src/index.html --open",
+    "dev": "parcel src/index.html -p 3000 --open",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
